# used-phone-price-model

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
notebooks/: 01_eda.ipynb  02_eda.ipynb
results/: lightgbm_importance.csv
src/: pipeline.py
src/data/: load_data.py  preprocess.py
src/eda/: __init__.py  binary_analysis.py  categorical_analysis.py  condition_analysis.py  constants.py  correlations.py  distributions.py  numerical_analysis.py  overview.py  time_analysis.py
src/model/: evaluate.py  interpret.py  model_all.py  models.py  train.py
tests/: test_load_data.py
